Fixing styling for my works and centering contact form

--- a/index.html
+++ b/index.html
@@ -202,25 +202,11 @@
                     <p class="text-center margin-b-20">Present your work in beautiful way </p>
                 </div>
             </div><!--work header-->
+
+            <div class="space-60"></div>
+
             <!--filter start-->
             <div class="container">  
-                <div id="js-filters-awesome-work" class="cbp-l-filters-work">
-                    <div data-filter="*" class="cbp-filter-item-active cbp-filter-item">
-                        SHOW ALL
-                    </div>
-                    <div data-filter=".identity" class="cbp-filter-item">
-                        IDENTITY <div class="cbp-filter-counter"></div>
-                    </div>
-                    <div data-filter=".web-design" class="cbp-filter-item">
-                        WEB DESIGN <div class="cbp-filter-counter"></div>
-                    </div>
-                    <div data-filter=".graphic" class="cbp-filter-item">
-                        GRAPHIC <div class="cbp-filter-counter"></div>
-                    </div>
-                    <div data-filter=".logos" class="cbp-filter-item">
-                        LOGO <div class="cbp-filter-counter"></div>
-                    </div>
-                </div><!--filter nav end-->
 
                 <div id="js-grid-awesome-work" class="cbp cbp-l-grid-work">
                     <div class="cbp-item identity">
@@ -285,13 +271,7 @@
                     </div><!--work item-->
                 </div><!--grid end-->
 
-                <div id="js-loadMore-awesome-work" class="cbp-l-loadMore-button">
-                    <a href="assets/ajax-awesome-work/loadMore.html" class="cbp-l-loadMore-link" rel="nofollow">
-                        <span class="cbp-l-loadMore-defaultText">LOAD MORE</span>
-                        <span class="cbp-l-loadMore-loadingText">LOADING...</span>
-                        <span class="cbp-l-loadMore-noMoreLoading">NO MORE WORKS</span>
-                    </a>
-                </div><!--work load more-->               
+            
             </div><!--container end-->
         </section>
         <!--portfolio end-->
@@ -328,7 +308,7 @@
                     </div>
                 </div><!--row-->
                 <div class="row">
-                    <div class="col-sm-6 margin-b-30 scrollReveal sr-left">
+                    <div class="col-sm-6 col-sm-offset-3 margin-b-30 scrollReveal sr-left">
                         <h4 class="text-uppercase margin-b-30">Say hello to me!</h4>
                         <form method="post" action="#" class="xone-contact">
                             <div class="row">
