Adding links to 6 portfolio items in my works

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="assets/ajax-awesome-work/project1.html" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Project Title</a>
+                        <a href="https://github.com/thomaszhang718/Lemcy" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Lemcy</a>
                         <div class="cbp-l-grid-work-desc">Web Design / Graphic</div>
                     </div><!--work item-->
                     <div class="cbp-item web-design logos">
@@ -226,7 +226,7 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="assets/ajax-awesome-work/project2.html" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Project Title</a>
+                        <a href="https://github.com/thomaszhang718/BetImRight" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Bet I'm Right</a>
                         <div class="cbp-l-grid-work-desc">Logo / Web Design</div>
                     </div><!--work item-->
                     <div class="cbp-item graphic logos">
@@ -236,7 +236,7 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="assets/ajax-awesome-work/project3.html" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Project Title</a>
+                        <a href="https://github.com/thomaszhang718/GifTastic" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Giftastic</a>
                         <div class="cbp-l-grid-work-desc">Graphic / Logo</div>
                     </div><!--work item-->
                     <div class="cbp-item web-design graphic">
@@ -246,7 +246,7 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="assets/ajax-awesome-work/project4.html" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Project Title</a>
+                        <a href="https://github.com/thomaszhang718/LIRI" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">LIRI</a>
                         <div class="cbp-l-grid-work-desc">Web Design / Graphic</div>
                     </div><!--work item-->
                     <div class="cbp-item identity web-design">
@@ -256,7 +256,7 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="assets/ajax-awesome-work/project5.html" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Project Title</a>
+                        <a href="https://github.com/thomaszhang718/DangerZone" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Danger Zone</a>
                         <div class="cbp-l-grid-work-desc">Web Design / Identity</div>
                     </div><!--work item-->
                     <div class="cbp-item identity web-design">
@@ -266,8 +266,8 @@
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
-                        <a href="assets/ajax-awesome-work/project6.html" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Project Title</a>
-                        <div class="cbp-l-grid-work-desc">Identity / Web Design</div>
+                        <a href="https://github.com/thomaszhang718/TalkToMeGoose" class="cbp-l-grid-work-title cbp-singlePage" rel="nofollow">Talk To Me Goose</a>
+                        <div class="cbp-l-grid-work-desc">MongoDB/Mongoose</div>
                     </div><!--work item-->
                 </div><!--grid end-->
 
