--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
     </head>
     <body data-spy="scroll">
         <!--pre-loader-->
@@ -126,29 +127,37 @@
                                 </div>
                             </div>
                         </div>
+
                         <div role="tabpanel" class="tab-pane" id="skills">
-                            <div class="col-sm-8 col-sm-offset-2 text-center">
-                                <div class="progress clearfix">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
-                                        <span class="skill-name">HTML5 / CSS3</span>  <span class="pull-right value">80%</span>
-                                    </div>
-                                </div><!--progress bar-->
-                                <div class="progress clearfix">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                        <span class="skill-name">Photoshop</span>  <span class="pull-right value">70%</span>
-                                    </div>
-                                </div><!--progress bar-->
-                                <div class="progress clearfix">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:90%">
-                                        <span class="skill-name">Jquery</span>  <span class="pull-right value">90%</span>
-                                    </div>
-                                </div><!--progress bar-->
-                                <div class="progress clearfix">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:97%">
-                                        <span class="skill-name">Tea</span>  <span class="pull-right value">97%</span>
-                                    </div>
-                                </div><!--progress bar-->
+                            <div class="col-sm-8 col-sm-offset-2 text-center skills-div">
+                                <!-- Javascript -->
+                                <i class="devicon-javascript-plain colored skills-icons"></i>
+                                <!-- HTML -->
+                                <i class="devicon-html5-plain-wordmark skills-icons"></i>
+                                <!-- CSS -->
+                                <i class="devicon-css3-plain-wordmark colored skills-icons"></i>
+                                <!-- Bootstrap -->
+                                <i class="devicon-bootstrap-plain-wordmark colored skills-icons"></i>
+                                <!-- jQuery -->
+                                <i class="devicon-jquery-plain-wordmark colored skills-icons"></i>
+                                <!-- Github -->
+                                <i class="devicon-github-plain-wordmark colored skills-icons"></i>
+
                             </div>
+
+                            <div class="col-sm-8 col-sm-offset-2 text-center skills-div">
+                                <!-- MySQL -->
+                                <i class="devicon-mysql-plain colored skills-icons"></i>
+                                <!-- Node.js -->
+                                <i class="devicon-nodejs-plain colored skills-icons"></i>
+                                <!-- MongoDB -->
+                                <i class="devicon-mongodb-plain-wordmark colored skills-icons"></i>
+                                <!-- Heroku.js -->
+                                <i class="devicon-heroku-plain colored skills-icons"></i>
+                                <!-- React.js -->
+                                <i class="devicon-react-original-wordmark colored skills-icons"></i>
+                            </div>
+
                         </div><!--tab panel end-->
                         <div role="tabpanel" class="tab-pane" id="interests">
                             <div class="row">
