--- a/index.html
+++ b/index.html
@@ -161,38 +161,38 @@
                         </div><!--tab panel end-->
                         <div role="tabpanel" class="tab-pane" id="interests">
                             <div class="row">
-                                <div class="col-md-3 col-sm-6 margin-b-30">
+                                <div class="col-md-4 col-sm-6 margin-b-30">
                                     <div class="process-box">
-                                        <h2><span class="text-color">1.</span> idea</h2>
+                                        <h2><span class="text-color">1.</span> Gamer</h2>
                                         <p>
-                                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                                            Ever since playing <i>The Legend of Zelda: A Link to the Past</i> with my father, I've been a lifelong fan of video games. I've recently been playing Counter-Strike: Global Offensive and League of Legends.
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-6 margin-b-30">
+                                <div class="col-md-4 col-sm-6 margin-b-30">
                                     <div class="process-box">
-                                        <h2><span class="text-color">2.</span> Design</h2>
+                                        <h2><span class="text-color">2.</span> Headphones Collector/Amateur Audiophile</h2>
                                         <p>
-                                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                                            As a fan of all things music, I started researching into better headphones in college in pursuit of better sound quality. I now have a few mid-range open and closed-back headphones for different audio experiences.
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-6 margin-b-30">
+                                <div class="col-md-4 col-sm-6 margin-b-30">
                                     <div class="process-box">
-                                        <h2><span class="text-color">3.</span> Develop</h2>
+                                        <h2><span class="text-color">3.</span> Music Festival Goer</h2>
                                         <p>
-                                            It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
+                                            After going to my first Music Festival in 2014 in New York City, I've traveled all over the United States for various events, including Las Vegas, Atlanta, and San Bernardino. My next trip is in the summer of 2017 to Rothbury Michigan for Electric Forest.
                                         </p>
                                     </div>
                                 </div>
-                                <div class="col-md-3 col-sm-6 margin-b-30">
+<!--                                 <div class="col-md-3 col-sm-6 margin-b-30">
                                     <div class="process-box">
                                         <h2><span class="text-color">4.</span> Launch</h2>
                                         <p>
                                             It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.
                                         </p>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div><!--tab panel end-->
                     </div><!--tab content end-->
