fixing links to portfolio pictures

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
                 <div id="js-grid-awesome-work" class="cbp cbp-l-grid-work">
                     <div class="cbp-item identity">
-                        <a href="assets/ajax-awesome-work/project1.html" class="cbp-caption cbp-singlePage" rel="nofollow">
+                        <a href="https://github.com/thomaszhang718/Lemcy" target="new">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="assets/images/w1.jpg" alt="">
                             </div>
@@ -229,7 +229,7 @@
                         <div class="cbp-l-grid-work-desc">Web Design / Graphic</div>
                     </div><!--work item-->
                     <div class="cbp-item web-design logos">
-                        <a href="assets/ajax-awesome-work/project2.html" class="cbp-caption cbp-singlePage" rel="nofollow">
+                        <a href="https://github.com/thomaszhang718/BetImRight" target="new">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="assets/images/w2.jpg" alt="">
                             </div>
@@ -239,7 +239,7 @@
                         <div class="cbp-l-grid-work-desc">Logo / Web Design</div>
                     </div><!--work item-->
                     <div class="cbp-item graphic logos">
-                        <a href="assets/ajax-awesome-work/project3.html" class="cbp-caption cbp-singlePage" rel="nofollow">
+                        <a href="https://github.com/thomaszhang718/GifTastic" target="new">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="assets/images/w3.jpg" alt="">
                             </div>
@@ -249,7 +249,7 @@
                         <div class="cbp-l-grid-work-desc">Graphic / Logo</div>
                     </div><!--work item-->
                     <div class="cbp-item web-design graphic">
-                        <a href="assets/ajax-awesome-work/project4.html" class="cbp-caption cbp-singlePage" rel="nofollow">
+                        <a href="https://github.com/thomaszhang718/LIRI" target="new">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="assets/images/w4.jpg" alt="">
                             </div>
@@ -259,7 +259,7 @@
                         <div class="cbp-l-grid-work-desc">Web Design / Graphic</div>
                     </div><!--work item-->
                     <div class="cbp-item identity web-design">
-                        <a href="assets/ajax-awesome-work/project5.html" class="cbp-caption cbp-singlePage" rel="nofollow">
+                        <a href="https://github.com/thomaszhang718/DangerZone" target="new">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="assets/images/w5.jpg" alt="">
                             </div>
@@ -269,7 +269,7 @@
                         <div class="cbp-l-grid-work-desc">Web Design / Identity</div>
                     </div><!--work item-->
                     <div class="cbp-item identity web-design">
-                        <a href="assets/ajax-awesome-work/project6.html" class="cbp-caption cbp-singlePage" rel="nofollow">
+                        <a href="https://github.com/thomaszhang718/TalkToMeGoose" target="new">
                             <div class="cbp-caption-defaultWrap">
                                 <img src="assets/images/w6.jpg" alt="">
                             </div>
