changing to target new

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                     </div><!--top left col end-->
                     <div class="col-sm-6 text-right hidden-xs">
                         <ul class="list-inline top-socials">
-                            <li><a href="https://github.com/thomaszhang718"><i class="ion-social-github"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/thomaswzhang"><i class="ion-social-linkedin"></i></a></li>
+                            <li><a href="https://github.com/thomaszhang718" target="new"><i class="ion-social-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/thomaswzhang" target="new"><i class="ion-social-linkedin"></i></a></li>
                         </ul>
                     </div><!--top social col end-->
                 </div><!--row-->
