Testing portfolio pic

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                     <div class="cbp-item identity web-design">
                         <a href="https://github.com/thomaszhang718/DangerZone" target="new">
                             <div class="cbp-caption-defaultWrap">
-                                <img src="assets/images/w5.jpg" alt="">
+                                <img src="assets/images/Danger-Zone.png" alt="">
                             </div>
                             <div class="cbp-caption-activeWrap"></div>
                         </a>
