edit interest 2 header

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                                 </div>
                                 <div class="col-md-4 col-sm-6 margin-b-30">
                                     <div class="process-box">
-                                        <h2><span class="text-color">2.</span> Headphones Collector/Amateur Audiophile</h2>
+                                        <h2><span class="text-color">2.</span> Headphones Collector</h2>
                                         <p>
                                             As a fan of all things music, I started researching into better headphones in college in pursuit of better sound quality. I now have a few mid-range open and closed-back headphones for different audio experiences.
                                         </p>
